<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:title="TODO">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/spojeniFragment"
                    android:title="@string/vyhledat_spojeni"
                    android:icon="@drawable/ic_baseline_timeline_24" />
                <item
                    android:id="@+id/jizdniRadyFragment"
                    android:title="@string/jizdni_rady"
                    android:icon="@drawable/ic_baseline_format_list_numbered_24" />
                <item
                    android:id="@+id/odjezdyFragment"
                    android:title="@string/odjezdy"
                    android:icon="@drawable/ic_baseline_departure_board_24" />
                <item
                    android:id="@+id/mapaFragment"
                    android:title="@string/mapa_linek"
                    android:icon="@drawable/ic_baseline_map_24" />
            </group>
        </menu>
    </item>

    <item android:title="TODO">
        <menu>
            <group android:checkableBehavior="none" >
                <item
                    android:id="@+id/actionDatum"
                    android:title="@string/zmena_data"
                    android:icon="@drawable/ic_baseline_today_24" />
                <item
                    android:id="@+id/actionSettings"
                    android:title="@string/nastaveni"
                    android:icon="@drawable/ic_baseline_settings_24" />
                <item
                    android:id="@+id/actionFeedback"
                    android:title="@string/zpetna_vazba"
                    android:icon="@drawable/ic_baseline_stars_24" />
                <item
                    android:id="@+id/actionKonec"
                    android:title="@string/vypnout_aplikaci"
                    android:icon="@drawable/ic_baseline_power_settings_new_24" />
            </group>
        </menu>
    </item>
</menu>